# fr3_rail_runner

fr3_custom_controllers/: CMakeLists.txt  fr3_custom_controllers.xml  package.xml
fr3_custom_controllers/config/: gravity_compensation_controller.yaml  initial_positions.yaml  inverse_dynamics_controller.yaml  joint_pd_controller.yaml  operational_space_controller.yaml  ros2_controllers.yaml
fr3_custom_controllers/include/controller_laws/: osc_law.hpp
fr3_custom_controllers/include/fr3_custom_controllers/: gravity_compensation_controller.hpp  inverse_dynamics_controller.hpp  joint_pd_controller.hpp  operational_space_controller.hpp  utils.hpp
fr3_custom_controllers/launch/: gravity_compensation.launch.py  inverse_dynamics_controller.launch.py  joint_pd_controller.launch.py  operational_space.launch.py  osc.launch.py
fr3_custom_controllers/operational_space_controller/: CMakeLists.txt  package.xml
fr3_custom_controllers/src/: gravity_compensation_controller.cpp  inverse_dynamics_controller.cpp  joint_pd_controller.cpp  operational_space_controller.cpp
fr3_custom_controllers/test_pd_controller/: CMakeLists.txt  package.xml
fr3_custom_controllers/test_pd_controller/include/test_pd_controller/: test_pd_controller.hpp
fr3_custom_controllers/test_pd_controller/src/: test_pd_controller.yaml
fr3_description/: CMakeLists.txt  README.md  package.xml
fr3_description/meshes/collision/: moving_platform.stl  stationary_platform.stl
fr3_description/urdf/: fr3.urdf
fr3_ee_error/: package.xml  setup.cfg  setup.py
fr3_gazebo_moveit/: CMakeLists.txt  package.xml
fr3_gazebo_moveit/launch/: fr3.launch.py  moveit_gazebo.launch.py
fr3_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
fr3_moveit_config/config/: fr3.ros2_control.xacro  fr3.srdf  fr3.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
fr3_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
